# bevy-mobile-starter

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
ios/App/: Info.plist  ViewController.swift
ios/App.xcodeproj/: project.pbxproj
src/: lib.rs  main.rs
src/app/: plugin.rs
src/resources/: counter.rs
src/systems/: counter.rs
src/ui/: scenes.rs
